--- a/services/computing-service/main.ipynb
+++ b/services/computing-service/main.ipynb
@@ -43,7 +43,7 @@
     "#---------------------------------------------------------------\n",
     "\n",
     "# load citra RGB (BGR)\n",
-    "img = cv.imread(r'C:\\computing-service\\images\\B3023KEZ.jpg')\n",
+    "img = cv.imread(r'C:\\computing-service\\images')\n",
     "\n",
     "# resize citra dengan mengalikannya ukuran aslinya dengan 0.4\n",
     "# contoh: 1920 x 2560 ==> 1920 x 0.4 = 768 ; 2560 x 0.4 = 1024 ==> hasilnya 768 x 1024\n",
@@ -588,7 +588,7 @@
    "outputs": [],
    "source": [
     "# Simpan hasil deteksi plat nomor ke dalam file teks\n",
-    "with open('hasil_deteksi_plat.txt', 'w') as f:\n",
+    "with open('result_plate.txt', 'w') as f:\n",
     "    f.write(plate_number)"
    ]
   }
