--- a/services/computing-service/elasticsearch.ipynb
+++ b/services/computing-service/elasticsearch.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transport elasitcsearch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
