--- a/machine learning/spark/spark.ipynb
+++ b/machine learning/spark/spark.ipynb
@@ -84,10 +84,10 @@
    "outputs": [],
    "source": [
     "# Baca file CSV pertama (data-user.csv)\n",
-    "df_user = spark.read.csv(\"file:///C:/App Big Data/spark/data-user.csv\", header=True, inferSchema=True)\n",
+    "df_user = spark.read.csv(\"file:///APPBG/data-user.csv\", header=True, inferSchema=True)\n",
     "\n",
     "# Baca file CSV kedua (plat.csv)\n",
-    "df_plat = spark.read.csv(\"file:///C:/App Big Data/spark/plat.csv\", header=True, inferSchema=True)"
+    "df_plat = spark.read.csv(\"file:///APPBG/plat.csv\", header=True, inferSchema=True)"
    ]
   },
   {
