--- a/machine learning/spark/spark.ipynb
+++ b/machine learning/spark/spark.ipynb
@@ -84,10 +84,10 @@
    "outputs": [],
    "source": [
     "# Baca file CSV pertama (data-user.csv)\n",
-    "df_user = spark.read.csv(\"file:///APPBG/data-user.csv\", header=True, inferSchema=True)\n",
+    "df_user = spark.read.csv(\"file:///C:/App Big Data/spark/data-user.csv\", header=True, inferSchema=True)\n",
     "\n",
     "# Baca file CSV kedua (plat.csv)\n",
-    "df_plat = spark.read.csv(\"file:///APPBG/plat.csv\", header=True, inferSchema=True)"
+    "df_plat = spark.read.csv(\"file:///C:/App Big Data/spark/plat.csv\", header=True, inferSchema=True)"
    ]
   },
   {
@@ -322,6 +322,59 @@
     "evaluator = RegressionEvaluator(labelCol=\"cost\", predictionCol=\"prediction\", metricName=\"mse\")\n",
     "mse = evaluator.evaluate(predictions)\n",
     "print(f\"Mean Squared Error: {mse}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TEST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+--------+-----+------------------+\n",
+      "|   plate|hourStay| cost|        prediction|\n",
+      "+--------+--------+-----+------------------+\n",
+      "|B1H9V5R8|       3|15000| 14999.99999999998|\n",
+      "|B1S5R2M9|       3|15000| 14999.99999999998|\n",
+      "|B1S8U5R4|      10|50000| 50000.00000000004|\n",
+      "|B2R7W9J4|       2|10000|  9999.99999999997|\n",
+      "|B2Z8R5V7|       1| 5000| 4999.999999999963|\n",
+      "|B3K5H8Z7|       6|30000|30000.000000000007|\n",
+      "|B4B7X2J6|      10|50000| 50000.00000000004|\n",
+      "|B4K7N1S8|       7|35000|35000.000000000015|\n",
+      "|B5F2J9X6|       7|35000|35000.000000000015|\n",
+      "|B5F3V2M8|       6|30000|30000.000000000007|\n",
+      "|B5H1W3Z9|       6|30000|30000.000000000007|\n",
+      "|B5M2W3C9|       5|25000|24999.999999999996|\n",
+      "|B5Z3X6J4|       7|35000|35000.000000000015|\n",
+      "|B6F3C8S1|       9|45000| 45000.00000000003|\n",
+      "|B6P2Z4U1|       3|15000| 14999.99999999998|\n",
+      "|B6X2R9C1|       1| 5000| 4999.999999999963|\n",
+      "|B8F3Z9W7|       7|35000|35000.000000000015|\n",
+      "|B9X2N5S1|       7|35000|35000.000000000015|\n",
+      "+--------+--------+-----+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Prediksi pada set pengujian\n",
+    "predictions = lr_model.transform(test_data)\n",
+    "\n",
+    "# Menyimpan hasil prediksi ke dalam DataFrame baru\n",
+    "predictions_df = predictions.select(\"plate\", \"hourStay\", \"cost\", \"prediction\")\n",
+    "\n",
+    "# Menampilkan hasil prediksi\n",
+    "predictions_df.show()\n"
    ]
   }
  ],
