--- a/machine learning/plate-detection/model.ipynb
+++ b/machine learning/plate-detection/model.ipynb
@@ -42,6 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# lokasi data file\n",
     "data_dir = r'C:\\machine learning\\plate-detection\\data'\n",
     "\n",
     "batch_size = 32\n",
@@ -73,6 +74,7 @@
     }
    ],
    "source": [
+    "# melakukan spliting\n",
     "train_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
     "  data_dir,\n",
     "  validation_split=0.2,\n",
@@ -144,6 +146,7 @@
     }
    ],
    "source": [
+    "# membuat model \n",
     "AUTOTUNE = tf.data.AUTOTUNE\n",
     "\n",
     "train_ds = train_ds.cache().shuffle(1000).prefetch(buffer_size=AUTOTUNE)\n",
@@ -238,6 +241,7 @@
     }
    ],
    "source": [
+    "# melakukan fit train model\n",
     "epochs=10\n",
     "history = model.fit(\n",
     "  train_ds,\n",
