--- a/machine learning/spark/main.ipynb
+++ b/machine learning/spark/main.ipynb
@@ -217,26 +217,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "╒════╤══════════╤══════════════╤════════════╤════════╤═════════════════════╤════════════╤════════╕\n",
-      "│    │ plate    │ username     │   hourStay │   cost │ createdAt           │ source     │ type   │\n",
-      "╞════╪══════════╪══════════════╪════════════╪════════╪═════════════════════╪════════════╪════════╡\n",
-      "│  0 │ B4W3T9S1 │ Well-placeda │          4 │  20000 │ 2024-05-12 01:20:27 │ motorcycle │ odd    │\n",
-      "├────┼──────────┼──────────────┼────────────┼────────┼─────────────────────┼────────────┼────────┤\n",
-      "│  1 │ B8C2X4V5 │ Duskysuperhi │          7 │  35000 │ 2024-05-12 01:20:27 │ motorcycle │ odd    │\n",
-      "├────┼──────────┼──────────────┼────────────┼────────┼─────────────────────┼────────────┼────────┤\n",
-      "│  2 │ B7J8Z5T2 │ Rapidspatula │          2 │  10000 │ 2024-05-12 01:20:27 │ motorcycle │ even   │\n",
-      "├────┼──────────┼──────────────┼────────────┼────────┼─────────────────────┼────────────┼────────┤\n",
-      "│  3 │ B6J1W4T9 │ Riotousgamet │          4 │  20000 │ 2024-05-12 01:20:27 │ motorcycle │ odd    │\n",
-      "├────┼──────────┼──────────────┼────────────┼────────┼─────────────────────┼────────────┼────────┤\n",
-      "│  4 │ B7W9N3T2 │ Crudeclipper │          4 │  20000 │ 2024-05-12 01:20:28 │ motorcycle │ even   │\n",
-      "╘════╧══════════╧══════════════╧════════════╧════════╧═════════════════════╧════════════╧════════╛\n"
+      "+----+----------+--------------+------------+--------+---------------------+------------+--------+\n",
+      "|    | plate    | username     |   hourStay |   cost | createdAt           | source     | type   |\n",
+      "|----+----------+--------------+------------+--------+---------------------+------------+--------|\n",
+      "|  0 | B4W3T9S1 | Well-placeda |          4 |  20000 | 2024-05-12 01:20:27 | motorcycle | odd    |\n",
+      "|  1 | B8C2X4V5 | Duskysuperhi |          7 |  35000 | 2024-05-12 01:20:27 | motorcycle | odd    |\n",
+      "|  2 | B7J8Z5T2 | Rapidspatula |          2 |  10000 | 2024-05-12 01:20:27 | motorcycle | even   |\n",
+      "|  3 | B6J1W4T9 | Riotousgamet |          4 |  20000 | 2024-05-12 01:20:27 | motorcycle | odd    |\n",
+      "|  4 | B7W9N3T2 | Crudeclipper |          4 |  20000 | 2024-05-12 01:20:28 | motorcycle | even   |\n",
+      "+----+----------+--------------+------------+--------+---------------------+------------+--------+\n"
      ]
     }
    ],
@@ -245,7 +241,7 @@
     "df_merge = df_merge.withColumn(\"createdAt\", date_format(df_merge[\"createdAt\"], \"yyyy-MM-dd HH:mm:ss\"))\n",
     "tabulate_df = df_merge.select(\"plate\", \"username\", \"hourStay\", \"cost\", \"createdAt\", \"source\", \"type\").toPandas()\n",
     "\n",
-    "print(tabulate(tabulate_df.head(5), headers='keys', tablefmt='fancy_grid'))"
+    "print(tabulate(tabulate_df.head(100), headers='keys', tablefmt='psql'))"
    ]
   },
   {
