--- a/machine learning/plate-detection/main.ipynb
+++ b/machine learning/plate-detection/main.ipynb
@@ -58,7 +58,7 @@
    ],
    "source": [
     "# load citra RGB (BGR)\n",
-    "img = cv.imread(r'C:\\machine learning\\plate-detection\\images')\n",
+    "img = cv.imread(r'\\plate-detection\\images')\n",
     "\n",
     "# resize citra dengan mengalikannya ukuran aslinya dengan 0.4\n",
     "# contoh: 1920 x 2560 ==> 1920 x 0.4 = 768 ; 2560 x 0.4 = 1024 ==> hasilnya 768 x 1024\n",
@@ -574,7 +574,7 @@
     "model = keras.models.load_model('model')\n",
     "\n",
     "# Path ke folder yang berisi citra\n",
-    "image_folder = r'C:\\machine learning\\plate-detection\\images'\n",
+    "image_folder = r'\\plate-detection\\images'\n",
     "\n",
     "# List semua file dalam folder\n",
     "image_files = [f for f in os.listdir(image_folder) if os.path.isfile(os.path.join(image_folder, f))]\n",
