--- a/machine learning/plate-detection/model.ipynb
+++ b/machine learning/plate-detection/model.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "# lokasi data file\n",
-    "data_dir = r'C:\\machine learning\\plate-detection\\data'\n",
+    "data_dir = r'\\plate-detection\\data'\n",
     "\n",
     "batch_size = 32\n",
     "img_height = 40\n",
